CF-445: Fix font weight issue on Windows
This commit is for changing font weight to be normal instead of
thin because it shows up too light on windows machines.

--- a/assets/stylesheets/coefficient/slideout.sass
+++ b/assets/stylesheets/coefficient/slideout.sass
@@ -32,7 +32,6 @@
     font-weight: 200
   .content
     padding: 15px 3px 0 3px
-    font-weight: 200
 
 .slidein
   padding: 5px
