--- a/assets/stylesheets/coefficient/tables.sass
+++ b/assets/stylesheets/coefficient/tables.sass
@@ -18,7 +18,6 @@ table
     border-bottom: 2px solid $table-border-color
     th
       font-size: 13px
-      font-weight: 200
       vertical-align: bottom
       padding: 10px 8px 5px 8px
   tbody
